Fix highlight of matching elements and make it more visible

--- a/app/webroot/css/layouts/elements.css
+++ b/app/webroot/css/layouts/elements.css
@@ -1654,6 +1654,11 @@ div.hideLink {
     vertical-align: bottom;
 }
 
+.md-autocomplete-suggestions-container li .highlight{
+    color: #222222;
+    background-color: #ffff8d;
+}
+
 .usersLanguages .languageInfo {
     margin: 0;
     padding: 0;
